# LLM-honeypot

./: .gitignore  Makefile  README.md  docker-compose.yml  llm-honeypot.code-workspace
api_server/: pyproject.toml  server.py
api_server/logs/: requests.json
configs/: cat8193.py  cowrie.cfg  df.py  disk_recover.py  fsck_repair.py  id_service.py  init.py  llm-honeypot.service  llm_prompts.py  ls.py  passwd  ps.py  pwd_cmd.py  server_init.py  sysctl_recovery.py  version  whoami.py
db_server/: Dockerfile  general-log.cnf  init-db.sql
dns-honeypot/: dns_honeypot.py  main.py  pyproject.toml
dns_honeypot/: dns_honeypot.py  dns_queries.json
ftp_server/: server.py
ftp_server/logs/: ftp_commands.json
process_logs/: pyproject.toml
scripts/: backup_honeypot.sh
web/: Dockerfile  entrypoint.sh  migration.md  package.json  pyproject.toml
web/src/: processLogs.js  server.js
web/src/logProcessors/: apiLogs.js  cowrieLogs.js  dbLogs.js  dnsLogs.js  ftpLogs.js  geoip.js  honeypotState.js  processLogs.js  webserverLogs.js
web/templates/main/: explainer.html  index.html
webserver/: Dockerfile  app.js  docsResponses.js  package.json
webserver/logs/: logs.json
webserver/public/: style.css
webserver/views/: dashboard.ejs  index.ejs  login.ejs  upload.ejs  uploads.ejs
