[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geoip2>=5.0.1",
    "ipaddress>=1.0.23",
    "jinja2>=3.1.3",
    "loguru>=0.7.3",
    "numpy>=2.2.3",
    "orjson>=3.10.15",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.67.1",
]

[tool.pyright]
# disable pyright in favor of ruff
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
